--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <div>
+    <div id="mainbox">
         <h1>Rock Paper Scissors Game</h1>
+        <p>By Gergő Ujvárosi</p>
+        <div> <button style="width: 200px; height: 200px;"></button></div>
+        <div id="chooserow">
+            <button> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
+            <button> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
+            <button> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
+        </div>
     </div>
 </body>
 </html>
