replaced ai opponent button with box + style

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <div id="mainbox">
+    <div class="mainbox">
         <h1>Rock Paper Scissors Game</h1>
         <p>By Gergő Ujvárosi</p>
-        <div> <button style="width: 200px; height: 200px;"></button></div>
-        <div id="chooserow">
+
+        <div class="aichoicebox"></div>
+
+        <div class="chooserow">
             <button> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
             <button> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
             <button> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
         </div>
+
     </div>
 </body>
 </html>
