added Bootstrap; Cleaned up style.css; Cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="mainbox">
-        <h1>Rock Paper Scissors Game</h1>
-        <p>By Gergő Ujvárosi</p>
+    <div class="container">
+        <div class="container align-content-center">
+            <h1>Rock Paper Scissors Game</h1>
+            <p>By Gergő Ujvárosi</p>
+        </div>
 
-        <div class="aichoicebox"></div>
+        <div class="aichoicebox">
+            <button class="btn aichoice"></button>
+        </div>
 
         <div class="chooserow">
-            <button> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
-            <button> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
-            <button> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
+            <button class="btn"> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
+            <button class="btn"> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
+            <button class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
         </div>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
