--- a/index.html
+++ b/index.html
@@ -6,22 +6,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="container align-content-center">
+    <div class="container justify-content-center">
+
+        <div class="title">
             <h1>Rock Paper Scissors Game</h1>
             <p>By Gergő Ujvárosi</p>
         </div>
 
         <div class="aichoicebox">
-            <button class="btn aichoice"></button>
+            <button class="btn aichoice"> <img class="RPSChoose" src="imgs/Paper.png" alt="Placeholder AI choice"></button>
         </div>
 
-        <div class="chooserow">
-            <button class="btn"> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
-            <button class="btn"> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
-            <button class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
-        </div>
-
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <button class="btn"> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
+              </div>
+              <div class="col">
+                <button class="btn"> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
+              </div>
+              <div class="col">
+                <button class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
+              </div>
+            </div>
+          </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
