--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container justify-content-center">
-
+    <div class="container justify-content-center mt-2">
         <div class="title">
-            <h1>Rock Paper Scissors Game</h1>
-            <p>By Gergő Ujvárosi</p>
+            <h1 class="header">Rock Paper Scissors Game</h1>
+            <p class="header">By Gergő Ujvárosi</p>
         </div>
 
-        <div class="aichoicebox">
+        <div class="aichoicebox container justify-content-center">
             <button class="btn aichoice"> <img class="RPSChoose" src="imgs/Paper.png" alt="Placeholder AI choice"></button>
         </div>
 
