--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container justify-content-center mt-2">
-        <div class="title">
+    <div class="container">
+        <div class="title mt-2">
             <h1 class="header">Rock Paper Scissors Game</h1>
             <p class="header">By Gergő Ujvárosi</p>
         </div>
 
-        <div class="aichoicebox container justify-content-center">
+        <div class="aichoicebox">
             <button class="btn aichoice"> <img class="RPSChoose" src="imgs/Paper.png" alt="Placeholder AI choice"></button>
         </div>
 
@@ -28,6 +28,10 @@
                 <button class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
               </div>
             </div>
+          </div>
+          <div class="title mt-5">
+            <h1 class="header"> Press on a symbol to play</h1>
+            <p class="header"> Your score: 0 points</p>
           </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
