recolored pics; some tweaks to AI choice

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             <p class="header">By Gergő Ujvárosi</p>
         </div>
 
-        <div class="aichoicebox">
-            <button class="btn aichoice"> <img class="RPSChoose" src="imgs/Paper.png" alt="Placeholder AI choice"></button>
+        <div class="aichoicebox my-2 align-">
+            <div class="d-inline">
+                <img class="RPSChoose" src="imgs/Paper.png" alt="placeholder">
+            </div>
         </div>
 
         <div class="container text-center">
