finally centered AI choice

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
             <p class="header">By Gergő Ujvárosi</p>
         </div>
 
-        <div class="aichoicebox my-2 align-">
-            <div class="d-inline">
-                <img class="RPSChoose" src="imgs/Paper.png" alt="placeholder">
-            </div>
+        <div class="aichoicebox my-2">
+            <img class="RPSChoose" src="imgs/Paper.png" alt="placeholder">
         </div>
 
         <div class="container text-center">
