--- a/index.html
+++ b/index.html
@@ -8,31 +8,60 @@
 </head>
 <body>
     <div class="container">
+
         <div class="title mt-2">
             <h1 class="header">Rock Paper Scissors Game</h1>
             <p class="header">By Gergő Ujvárosi</p>
         </div>
 
         <div class="aichoicebox my-2">
-            <img class="RPSChoose" src="imgs/Paper.png" alt="placeholder">
+            <img class="RPSChoose" src="imgs/play.png" alt="placeholder">
         </div>
 
         <div class="container text-center">
+
             <div class="row">
+
               <div class="col">
                 <button class="btn"> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
               </div>
+
               <div class="col">
                 <button class="btn"> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
               </div>
+              
               <div class="col">
                 <button class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
               </div>
+
             </div>
+
           </div>
+
+
           <div class="title mt-5">
-            <h1 class="header"> Press on a symbol to play</h1>
-            <p class="header"> Your score: 0 points</p>
+
+            <h1 class="header"> Choose something to play</h1>
+
+            <div class="container text-center">
+
+              <div class="row align-items-start">
+
+                  <div class="col">
+                    <p class="header">Won: 0</p>
+                  </div>
+
+                  <div class="col">
+                    <p class="header">Draw: 0</p>
+                  </div>
+
+                  <div class="col">
+                    <p class="header">Lost: 0</p>
+
+                  </div>
+
+              </div>
+        
           </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
