--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="aichoicebox my-2">
-            <img class="RPSChoose" src="imgs/play.png" alt="placeholder">
+            <img id="aichoice" class="RPSChoose" src="imgs/play.png" alt="AI choice">
         </div>
 
         <div class="container text-center">
@@ -23,15 +23,15 @@
             <div class="row">
 
               <div class="col">
-                <button class="btn"> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
+                <button id="paperbtn" onclick="play(this.id)" class="btn"> <img src="imgs/Paper.png" alt="Choose Paper" class="RPSChoose"> </button>
               </div>
 
               <div class="col">
-                <button class="btn"> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
+                <button id="rockbtn" onclick="play(this.id)" class="btn"> <img src="imgs/Rock.png" alt="Choose Rock" class="RPSChoose"> </button>
               </div>
               
               <div class="col">
-                <button class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
+                <button id="scissorsbtn" onclick="play(this.id)" class="btn"> <img src="imgs/Scissors.png" alt="Choose Scissors" class="RPSChoose"> </button>
               </div>
 
             </div>
@@ -41,22 +41,22 @@
 
           <div class="title mt-5">
 
-            <h1 class="header"> Choose something to play</h1>
+            <h1 id="gameprogress" class="header"> Choose something to start</h1>
 
             <div class="container text-center">
 
               <div class="row align-items-start">
 
                   <div class="col">
-                    <p class="header">Won: 0</p>
+                    <p id="wontext" class="header">Won: 0</p>
                   </div>
 
                   <div class="col">
-                    <p class="header">Draw: 0</p>
+                    <p id="drawtext" class="header">Draw: 0</p>
                   </div>
 
                   <div class="col">
-                    <p class="header">Lost: 0</p>
+                    <p id="losttext" class="header">Lost: 0</p>
 
                   </div>
 
@@ -64,6 +64,93 @@
         
           </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+      let won = 0; let draw = 0; let lost = 0;
+
+      function play(clicked_id) {
+
+        computerchoice = Math.floor(Math.random() * (3 - 1 + 1) + 1);
+
+        switch(computerchoice) {
+          case 1:
+            document.getElementById('aichoice').src="imgs/Paper.png"
+            break;
+          case 2:
+            document.getElementById('aichoice').src="imgs/Rock.png"
+            break;
+          case 3:
+            document.getElementById('aichoice').src="imgs/Scissors.png"
+            break;
+          default:
+            break;
+        }
+
+        if(clicked_id == "paperbtn") {
+
+          switch(computerchoice) {
+            case 1:
+              document.getElementById("gameprogress").textContent="It's a draw!";
+              document.getElementById("drawtext").textContent="Draw: " + ++draw;
+              break;
+            case 2:
+              document.getElementById("gameprogress").textContent="You Won!";
+              document.getElementById("wontext").textContent="Won: " + ++won;
+              break;
+            case 3:
+              document.getElementById("gameprogress").textContent="You Lost!";
+              document.getElementById("losttext").textContent="Lost: " + ++lost;
+              break;
+            default:
+              break;
+          }
+        }
+
+        if(clicked_id == "rockbtn") {
+
+          switch(computerchoice) {
+            case 1:
+              document.getElementById("gameprogress").textContent="You Lost!";
+              document.getElementById("losttext").textContent="Lost: " + ++lost;
+              break;
+            case 2:
+              document.getElementById("gameprogress").textContent="It's a draw!";
+              document.getElementById("drawtext").textContent="Draw: " + ++draw;
+              break;
+            case 3:
+              document.getElementById("gameprogress").textContent="You Won!";
+              document.getElementById("wontext").textContent="Won: " + ++won;
+              break;
+            default:
+              break;
+          }
+        }
+
+        if(clicked_id == "scissorsbtn") {
+
+          switch(computerchoice) {
+            case 1:
+              document.getElementById("gameprogress").textContent="You Won!";
+              document.getElementById("wontext").textContent="Won: " + ++won;
+              break;
+            case 2:
+              document.getElementById("gameprogress").textContent="You Lost!";
+              document.getElementById("losttext").textContent="Lost: " + ++lost;
+              break;
+            case 3:
+              document.getElementById("gameprogress").textContent="It's a draw!";
+              document.getElementById("drawtext").textContent="Draw: " + ++draw;
+              break;
+            default:
+              break;
+          }
+        }
+
+      }
+
+    </script>
+
 </body>
 </html>
